# contextcore

./: .contextcore-quality.yaml  .contextcore.yaml  .gitignore  .pre-commit-config.yaml  2026-01-22_lessons_learned.md  ARCHIVED.md  CLAUDE-full.md  CLAUDE.md  CONFLICT_RESOLUTION_GUIDE.md  DASHBOARD_CATALOG.md  DASHBOARD_CONSOLIDATION_INDEX.yaml  INTEGRATION_WORKFLOW_IMPROVEMENTS.md  LICENSE  LICENSE.md  LICENSING.md  MERGE_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REMAINING_CONFLICTS.md  WORKFLOW_ADJUSTMENTS_AFTER_CONFLICT_RESOLUTION.md  WORKFLOW_UPDATES_AFTER_CONFLICT_RESOLUTION.md  docker-compose.yaml  log-audit.md  pyproject.toml  setup.ps1
.claude/rules/: code-generation.md
.github/workflows/: validate-dependencies.yml
.startd8/state/: artisan-implement-1771342825_state.json  artisan-implement-1771342874_state.json  generation_results.json  review_results.json  review_results.json.v1-bak
alertmanager/: ContextCore-notification.yaml
contextcore-owl/: CLAUDE.md  pyproject.toml
contextcore-owl/grafana/plugins/contextcore-workflow-panel/: module.js  module.js.map  plugin.json
contextcore-owl/plugins/contextcore-workflow-panel/src/components/: WorkflowPanel.tsx
contextcore-rabbit/: Dockerfile  README.md  drift-check.md  pyproject.toml
contextcore-rabbit/src/contextcore_rabbit/: __init__.py  action.py  alert.py  cli.py  server.py
contextcore-rabbit/src/contextcore_rabbit/actions/: __init__.py  beaver_workflow.py  log.py
crds/: projectcontext.yaml
demo/: README.md
demo/dashboards/: project-operations.json  project-progress.json  sprint-metrics.json
demo/projectcontexts/: adservice.yaml  cartservice.yaml  checkoutservice.yaml  currencyservice.yaml  emailservice.yaml  frontend.yaml  loadgenerator.yaml  paymentservice.yaml  productcatalogservice.yaml  recommendationservice.yaml  shippingservice.yaml
demo/setup/: deploy.ps1  deploy.sh  kind-cluster.yaml
docs/: A2A_7_DAY_EXECUTION_CHECKLIST.md  A2A_CONTRACTS_PROJECT_PLAN.md  A2A_DAY1_KICKOFF_AGENDA.md  A2A_INTEROPERABILITY_HIGH_LEVEL_PLAN.md  A2A_QUICKSTART.md  A2A_TRUNCATION_PREVENTION.md  A2A_V1_GOVERNANCE_POLICY.md  ARTIFACT_MANIFEST_CONTRACT.md  ARTISAN_PIPELINE_ISSUES_AND_TASKS_AS_SPANS.md  DOCS_INDEX_REQUIREMENTS.md  EXPANSION_PACKS.md  EXPORT_PIPELINE_ANALYSIS_GUIDE.md  IMPROVEMENT_SUGGESTIONS_2026-02-12.md  INSTALLATION.md  MANIFEST_CREATE_REQUIREMENTS.md  MANIFEST_EXPORT_TROUBLESHOOTING.md  MANIFEST_ONBOARDING_GUIDE.md  MANIFEST_TROUBLESHOOTING.md  NAMING_CONVENTION.md  ONBOARDING_METADATA_SCHEMA.md  OTEL_GENAI_MIGRATION_GUIDE.md  PI-101-002_TRACE_SPAN_EXECUTION_PLAN.md  PRIME_CONTRACTOR_CONSOLIDATION_FEEDBACK.md  PRIME_CONTRACTOR_WORKFLOW.md  VALIDATION_REPORT_SCHEMA.md  agent-communication-protocol.md  agent-semantic-conventions.md  blueprint-project-management-observability.md  blueprint-reference-architecture.md  getting-started-solopreneur.html  harbor-tour-platform-engineer.html  harbor-tour-team-lead.html  harbor-tour.html  reference-architecture-contextcore.md  semantic-conventions.md  skill-semantic-conventions.md  value-propositions.yaml
docs/adr/: 002-naming-wayfinder.md
docs/blueprints/: blueprint-implementation-guide.md  blueprint-integration-existing.md  blueprint-new-categories.md  blueprint-reusable-patterns.md  blueprint-validation-framework.md
docs/capability-index/: CAPABILITY_INDEX_GAP_ANALYSIS.md  PAIN_POINTS_GUIDE.md  ROI_ESTIMATION_ENGINE.md  SESSION_2026-01-29_STARTD8_BENEFITS.md  SESSION_2026-01-30_PAIN_POINTS.md  _cli_capabilities.yaml  _discovery_paths.yaml  _p2_capabilities.yaml  _patterns.yaml  _principles.yaml  _trigger_enrichments.yaml  agent-card.json  contextcore.agent.yaml  contextcore.benefits.yaml  contextcore.docs.yaml  contextcore.pain_points.yaml  contextcore.user.yaml  mcp-tools.json  pain-points-harbor-tour.html  roadmap.yaml
docs/dashboards/: INSTALLATION.md  PROJECT_DETAILS.md  PROJECT_PORTFOLIO_OVERVIEW.md  languagemodel1oh-site-launch-contextcore.json
docs/design/: A2A_GATE_REQUIREMENTS.md  AGENT_INSIGHTS_CLI_REQUIREMENTS.md  ARTIFACT_MANIFEST_CONTRACT.md  CONTEXT_CORRECTNESS_BY_CONSTRUCTION.md  CONTEXT_CORRECTNESS_EXTENSIONS.md  CONTRACT_DRIFT_DETECTION_REQUIREMENTS.md  ContextCore-context-contracts.md  DISCOVERABILITY_DEFENSE_IN_DEPTH_PLAN_2026-02-18.md  DISCOVERABILITY_FAILURE_INVESTIGATION_2026-02-18.md  ERROR_CONTEXT_ENRICHMENT_CONTRACTS_DESIGN.md  IN_PLACE_OUTPUTS_AND_RUN_PROVENANCE_DESIGN.md  IN_PLACE_OUTPUTS_AND_RUN_PROVENANCE_IMPLEMENTATION_CHECKLIST.md  LAYER2_SCHEMA_EVOLUTION_CONTRACTS_DESIGN.md  LAYER3_SEMANTIC_CONVENTION_CONTRACTS_DESIGN.md  LAYER4_CAUSAL_ORDERING_CONTRACTS_DESIGN.md  LAYER6_SLO_BUDGET_CONTRACTS_DESIGN.md  (+14 more)
docs/design-principles/: MOTTAINAI_DESIGN_PRINCIPLE.md
examples/: context_manifest_example.yaml  context_manifest_v2_example.yaml
plans/: BLC-007_integration_test_plan.md  CAPABILITY_INDEX_STRUCTURAL_ENHANCEMENT_PLAN.md  CLI_MODULARIZATION_PLAN.md  CONTEXT_MANIFEST_V2_PLAN_ENHANCEMENTS.md  CONTEXT_MANIFEST_V2_PRIME_CONTRACTOR_PLAN.md  EXPORT_ENRICHMENT_PLAN.md  PHASE1_QUICK_WINS.md  PHASE2_MEDIUM_EFFORT.md  PHASE3_STRATEGIC.md  TUI_IMPLEMENTATION_PLAN.md
runbooks/: ContextCore-runbook.md
scripts/: TUI_SCRIPT_FIXES.md  generate_docs_index.py  load_tasks_to_tempo.py  run-cap-delivery.sh  run_lead_contractor_tui.py  test_workflow_api.ps1  test_workflow_api.sh  validate_dependencies.py
semconv/: registry_manifest.yaml
slo/: ContextCore-slo.yaml
test_demo_output_fresh/: demo_logs.json  demo_spans.json
tests/: conftest.py  test_a2a_contracts.py  test_a2a_pilot.py  test_a2a_queries.py  test_analyze_plan_ops.py  test_artifact_types.py  test_artifact_validator.py  test_capability_discoverability.py  test_code_generation.py  test_content_verification.py  test_detector.py  test_export_retry.py  test_init_from_plan_enrichments.py  test_insight_cache.py  test_knowledge_parser.py  test_logger.py  test_manifest.py  test_manifest_v2.py  test_models.py  test_phase1_features.py  test_pipeline_checker.py  test_rbac.py  test_service_metadata.py  test_state.py  test_three_questions.py  test_tracker.py  test_value.py
(+552 files in other folders)
