[project]
name = "contextcore-rabbit"
version = "0.1.0"
description = "Rabbit (Waabooz) - Alert-triggered automation framework for ContextCore"
readme = "README.md"
license = {text = "Equitable Use License v1.0"}
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "flask-cors>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
beaver = [
    # For Beaver workflow integration (uses Prime Contractor from main ContextCore)
]

[project.scripts]
contextcore-rabbit = "contextcore_rabbit.cli:main"

[project.urls]
Homepage = "https://github.com/contextcore/contextcore-rabbit"
Documentation = "https://github.com/contextcore/contextcore-rabbit#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextcore_rabbit"]

[tool.hatch.build.targets.sdist]
include = ["src/contextcore_rabbit"]
